# Gamify

./: CMakeLists.txt  DevJournal.md  README.md
Source/: draw.c  draw.h  game.c  game.h  handlers.c  handlers.h  main.c
Source/hangman/: draw.c  draw.h  game.c  game.h
